<resources>
    <string name="app_name">MasterOfSpending</string>
    <string name="expense_name">Harcama Adı</string>
    <string name="letsGoText">Hadi Başlayalım !</string>
    <string name="add_expense">EKLE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addDetails">Açıklama</string>
    <string name="textViewHeader1">Harcama Ekle</string>
    <string name="textViewHeader2">Harcamalar</string>
    <string name="textViewHeader3">Harcama Detayı</string>
    <string name="detailsPageAddButton">EKLE</string>
    <string name="addDetailsPageExpenseEditText">Harcama Türü</string>
    <string name="addDetailsPageExpensePriceEditText">Harcama Fiyatı ( TL cinsinden )</string>
    <string name="textViewConvertedPriceText">Dönüştürülmüş Tutar: 0 TL</string>
    <string name="tlText">₺</string>
    <string name="dolarText">$</string>
    <string name="euroText">€</string>
    <string name="sterlinText">£</string>
    <string name="fragmentExpenseListAdd">EKLE</string>
    <string name="expenseDetailsNameArea">Harcama Adı\n</string>
    <string name="spendingdetails">Harcama Detayı\n</string>
    <string name="deleteButton">SİL</string>
    <string name="emptyString" />

</resources>