<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.expenseAddFragment.ExpenseAddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutExpense"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addDetails" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/textViewHeader1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <Button
        android:id="@+id/detailsPageAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="24dp"
        android:text="@string/detailsPageAddButton"
        app:cornerRadius="30dp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutExpense"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupCurrency"
        app:layout_constraintVertical_bias="0.379" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutExpense"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutExpense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addDetailsPageExpenseEditText"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutExpense"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/tlChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tlText"
            android:textColor="@color/black"
            app:chipBackgroundColor="#AFE6B1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dollarChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="#AFE6B1"
            android:text="@string/dolarText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/euroChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            app:chipBackgroundColor="#AFE6B1"
            android:layout_height="wrap_content"
            android:text="@string/euroText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sterlinChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            app:chipBackgroundColor="#AFE6B1"
            android:layout_height="wrap_content"
            android:text="@string/sterlinText" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>