<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.expenseDetailsFragment.ExpenseDetailsFragment">

    <ImageView
        android:id="@+id/detailsPageBackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_back_icon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expensesContainerTop"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="381dp" />



        <TextView
            android:id="@+id/expenseDetailsName"
            android:layout_width="184dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/expenseDetailsNameArea"
            android:textColor="#CC0C0C"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expenseDetails"
            android:layout_width="342dp"
            android:layout_height="111dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/spendingdetails"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/price_icon_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/expenseDetailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/emptyString"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgMoney"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toEndOf="@+id/imgMoney"
            app:layout_constraintTop_toTopOf="@+id/imgMoney"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/currencyDetailsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/emptyString"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/expenseDetailsPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/expenseDetailsPrice"
            app:layout_constraintTop_toTopOf="@+id/expenseDetailsPrice"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/expenseDetailsNumber"
            android:layout_width="26dp"
            android:layout_height="23dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FF0000"
        android:text="@string/deleteButton"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesContainerTop" />

</androidx.constraintlayout.widget.ConstraintLayout>